# CSE-180

./: README.md  gotoposition.cpp
CSE180finalproject/CSE180/: husky2019.tgz
CSE180finalproject/CSE180/devel/: .catkin
CSE180finalproject/CSE180/devel/include/husky_msgs/: HuskyStatus.h
CSE180finalproject/CSE180/devel/lib/assignments/: averagepose  goto  gotopoint  gotoposition  map  project1  tour
CSE180finalproject/CSE180/devel/lib/interactive_marker_twist_server/: marker_server
CSE180finalproject/CSE180/devel/lib/lms1xx/: LMS1xx_node
CSE180finalproject/CSE180/devel/lib/pkgconfig/: assignments.pc  husky_bringup.pc  husky_description.pc
CSE180finalproject/CSE180/devel/share/assignments/cmake/: assignmentsConfig.cmake
CSE180finalproject/CSE180/src/assignments/: CMakeLists.txt  package.xml
CSE180finalproject/CSE180/src/assignments/src/: drift.cpp  gotopoint.cpp  map.cpp  navigate.cpp  project1.cpp  tour.cpp
CSE180finalproject/CSE180/src/big_package/: CMakeLists.txt  package.xml
lab8/CSE180/devel/: .rosinstall  setup.sh
lab8/CSE180/devel/lib/assignments/: averagepose  cleanarea  drift  moverobot  navigate  transformations
lab8/CSE180/devel/lib/husky_base/: husky_node
lab8/CSE180/devel/lib/pkgconfig/: big_package.pc  husky_base.pc  husky_control.pc  husky_gazebo.pc  husky_msgs.pc  husky_navigation.pc  husky_viz.pc  interactive_marker_twist_server.pc  lms1xx.pc
lab8/CSE180/src/assignments/: CMakeLists.txt
lab8/CSE180/src/assignments/src/: averagepose.cpp  cleanarea.cpp  goto.cpp  gotoposition.cpp  moverobot.cpp  transformations.cpp
(+15 files in other folders)
