cmake_minimum_required(VERSION 2.8.3)
project(assignments)
find_package(catkin REQUIRED COMPONENTS
roscpp geometry_msgs tf2 tf2_ros actionlib laser_geometry tf
)
catkin_package()
include_directories( include ${catkin_INCLUDE_DIRS} )
add_executable(moverobot src/moverobot.cpp)
add_executable(drift src/drift.cpp)
add_executable(gotoposition src/gotoposition.cpp)
add_executable(transformations src/transformations.cpp)
add_executable(goto src/goto.cpp)
add_executable(tour src/tour.cpp)
add_executable(gotopoint src/gotopoint.cpp)
add_executable(navigate src/navigate.cpp)
add_executable(cleanarea src/cleanarea.cpp)
add_executable(averagepose src/averagepose.cpp)


target_link_libraries(moverobot ${catkin_LIBRARIES} )
target_link_libraries(drift ${catkin_LIBRARIES} )
target_link_libraries(gotoposition ${catkin_LIBRARIES} )
target_link_libraries(transformations ${catkin_LIBRARIES} )
target_link_libraries(goto ${catkin_LIBRARIES} )
target_link_libraries(tour ${catkin_LIBRARIES} )
target_link_libraries(gotopoint ${catkin_LIBRARIES} )
target_link_libraries(navigate ${catkin_LIBRARIES} )
target_link_libraries(cleanarea ${catkin_LIBRARIES} )
target_link_libraries(averagepose ${catkin_LIBRARIES} )
